# ocppi

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: checks.yaml  prerelease.yaml  release.yaml
api/schema/: ocppi-types-schema.json
cmake/: GitSemver.cmake  PFL.cmake
debian/: changelog  control  copyright  libocppi-dev.install  rules
examples/: CMakeLists.txt
examples/parse-config/: CMakeLists.txt
examples/parse-config/src/: main.cpp
examples/using-crun/: CMakeLists.txt
examples/using-crun/src/: main.cpp
include/ocppi/cli/: CLI.hpp  CommandFailedError.hpp  CommonCLI.hpp
include/ocppi/cli/crun/: Crun.hpp
include/ocppi/cli/runc/: Runc.hpp
include/ocppi/cli/youki/: Youki.hpp
include/ocppi/runtime/: ContainerID.hpp  CreateOption.hpp  DeleteOption.hpp  ExecOption.hpp  GlobalOption.hpp  KillOption.hpp  ListOption.hpp  Option.hpp  OutputFormatOption.hpp  Runtime.hpp  SpecRuntime.hpp  StartOption.hpp  StateOption.hpp  configure.hpp.in
include/ocppi/runtime/config/: Anet.hpp  BlockIO.hpp  BlockIODeviceThrottle.hpp  BlockIODeviceWeight.hpp  BoottimeClass.hpp  Capabilities.hpp  CappedCPU.hpp  CappedMemory.hpp  Class.hpp  Config.hpp  ConfigLoader.hpp  ConsoleSize.hpp  DeviceCgroup.hpp  FluffyCPU.hpp  FluffyMemory.hpp  Generators.hpp  Hook.hpp  Hooks.hpp  HugepageLimit.hpp  Hyperv.hpp  Hypervisor.hpp  IdMapping.hpp  IdType.hpp  Image.hpp  IncompatibleVersionError.hpp  IntelRdt.hpp  InvalidConfigError.hpp  IoPriority.hpp  Kernel.hpp  KeyMissingError.hpp  Linux.hpp  LinuxDevice.hpp  LinuxResources.hpp  Mount.hpp  NamespaceReference.hpp  NamespaceType.hpp  NetworkInterfacePriority.hpp  Personality.hpp  PersonalityDomain.hpp  Pids.hpp  (+32 more)
include/ocppi/runtime/config/types/: Anet.hpp  BlockIO.hpp  BlockIODeviceThrottle.hpp  BlockIODeviceWeight.hpp  BoottimeClass.hpp  Capabilities.hpp  CappedCPU.hpp  CappedMemory.hpp  Class.hpp  Config.hpp  ConsoleSize.hpp  DeviceCgroup.hpp  FluffyCPU.hpp  FluffyMemory.hpp  Generators.hpp  Hook.hpp  Hooks.hpp  HugepageLimit.hpp  Hyperv.hpp  Hypervisor.hpp  IdMapping.hpp  IdType.hpp  Image.hpp  IntelRdt.hpp  IoPriority.hpp  Kernel.hpp  Linux.hpp  LinuxDevice.hpp  LinuxResources.hpp  Mount.hpp  NamespaceReference.hpp  NamespaceType.hpp  NetworkInterfacePriority.hpp  Personality.hpp  PersonalityDomain.hpp  Pids.hpp  Process.hpp  PurpleCPU.hpp  PurpleMemory.hpp  Rdma.hpp  (+27 more)
include/ocppi/runtime/features/: Apparmor.hpp  Cgroup.hpp  Features.hpp  Generators.hpp  IntelRdt.hpp  Linux.hpp  NamespaceType.hpp  Seccomp.hpp  SeccompAction.hpp  SeccompArch.hpp  SeccompFlag.hpp  SeccompOperators.hpp  Selinux.hpp  helper.hpp
include/ocppi/runtime/features/types/: Apparmor.hpp  Cgroup.hpp  Features.hpp  Generators.hpp  IntelRdt.hpp  Linux.hpp  NamespaceType.hpp  Seccomp.hpp  SeccompAction.hpp  SeccompArch.hpp  SeccompFlag.hpp  SeccompOperators.hpp  Selinux.hpp  helper.hpp
include/ocppi/runtime/state/: Generators.hpp  State.hpp  Status.hpp  helper.hpp
include/ocppi/runtime/state/types/: Generators.hpp  State.hpp  Status.hpp  helper.hpp
include/ocppi/types/: ContainerListItem.hpp
libs/cli/: CMakeLists.txt
libs/cli/examples/using-crun/: CMakeLists.txt
libs/cli/examples/using-crun/src/: main.cpp
libs/cli/include/ocppi/cli/: CLI.hpp  CommandFailedError.hpp
libs/cli/include/ocppi/cli/crun/: Crun.hpp
libs/cli/include/ocppi/cli/runc/: Runc.hpp
libs/cli/include/ocppi/cli/youki/: Youki.hpp
libs/cli/misc/cmake/: ocppi__cli-config.cmake.in
libs/cli/schema/: crun-list-item.json
libs/cli/src/ocppi/cli/: CLI.cpp  CLIImpl.hpp  format.hpp
libs/cli/src/ocppi/cli/crun/: Crun.cpp  CrunImpl.cpp  CrunImpl.hpp  deserialize.cpp  deserialize.hpp
libs/cli/src/ocppi/cli/runc/: Runc.cpp
libs/cli/src/ocppi/cli/youki/: Youki.cpp
libs/common/: CMakeLists.txt
libs/common/include/ocppi/common/: InvalidArgumentError.hpp  SystemCallError.hpp
libs/common/misc/cmake/: ocppi__common-config.cmake.in
libs/common/src/ocppi/common/: InvalidArgumentError.cpp  configure.cpp
libs/runtime/: CMakeLists.txt
libs/runtime/examples/parse-config/: CMakeLists.txt
libs/runtime/examples/parse-config/src/: main.cpp
libs/runtime/include/ocppi/runtime/: ContainerID.hpp  DeleteOption.hpp  Option.hpp  RunOption.hpp  Runtime.hpp  SpecRuntime.hpp  StateOption.hpp
libs/runtime/include/ocppi/runtime/config/: ConfigLoader.hpp  IncompatibleVersionError.hpp  InvalidConfigError.hpp  WrongTypeError.hpp  load.hpp
libs/runtime/include/ocppi/runtime/config/types/: BlockIO.hpp  Config.hpp  Generators.hpp  Hooks.hpp  Linux.hpp  LinuxResources.hpp  Mount.hpp  Process.hpp  ResourcesNetwork.hpp  Seccomp.hpp  Solaris.hpp  Syscall.hpp  Windows.hpp  Zos.hpp
libs/runtime/include/ocppi/runtime/list/types/: Generators.hpp  Item.hpp  helper.hpp
libs/runtime/include/ocppi/runtime/state/types/: State.hpp
libs/runtime/misc/cmake/: ocppi__runtime-config.cmake.in
libs/runtime/src/ocppi/runtime/: semver.cpp  semver.hpp  semver_range.hpp
libs/runtime/src/ocppi/runtime/config/: ConfigLoader.cpp  load.cpp
libs/runtime/tests/: CMakeLists.txt
libs/utils/: CMakeLists.txt
libs/utils/include/ocppi/utils/ewrap/: EWRAP.hpp
libs/utils/src/ocppi/utils/ewrap/: EWRAP.cpp
misc/cmake/: ocppi-config.cmake.in
src/ocppi/cli/: CommonCLI.cpp  format.hpp
src/ocppi/cli/crun/: Crun.cpp
src/ocppi/cli/runc/: Runc.cpp
src/ocppi/cli/youki/: Youki.cpp
src/ocppi/runtime/: Option.cpp  OutputFormatOption.cpp  semver_range.cpp
src/ocppi/runtime/config/: ConfigLoader.cpp  IncompatibleVersionError.cpp  InvalidConfigError.cpp  KeyMissingError.cpp  WrongTypeError.cpp
tools/: iwyu.sh  update-include.sh
tools/codegen/: README.md  codegen.sh  create-patch.sh  fix-unknow-types.patch  fix.patch  package-lock.json  package.json
tools/iwyu/: boost-1.75-all.imp  mapping.imp
